components/navbar/style.scss
/* Copyright (c) 2017 Pietro Albini <pietro@pietroalbini.org>
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to
 * deal in the Software without restriction, including without limitation the
 * rights to use, copy, modify, merge, publish, distribute, sublicense, and/or
 * sell copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
 * FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
 * IN THE SOFTWARE.
 */

.navbar {
    background: $color_main;
    color: $color_white;
    margin-bottom: 2em;
    box-shadow: 0 0.2em 0.2em rgba(0, 0, 0, 0.2);

    width: 100%;
    overflow: auto;
    white-space: nowrap;

    &:after {
        content: "";
        display: block;
        visibility: hidden;
        height: 0;
        clear: both;
    }

    ul {
        margin: 0;
        padding: 0;

        &.left {
            float: left;
        }

        &.right {
            float: right;
        }

        li {
            display: inline-block;
            margin: 0;
            padding: 0.75em 1em;

            a {
                display: block;
                margin: -0.75em -1em;
                padding: 0.75em 1em;

                text-decoration: none;
                color: rgba(255, 255, 255, 0.7);
                transition: $transition_length color ease-out;

                &:hover {
                    color: $color_white;
                }

                &.active {
                    color: $color_white;
                    background: rgba(255, 255, 255, 0.15);
                }
            }
        }
    }

    .wrapper {
        padding: 0;
    }

    @media all and (max-width: $wrapper_size) {

        ul {
            display: inline-block;

            &.left, &.right {
                float: none;
            }
        }

        .wrapper {
            display: inline-block;
        }

    }
}

